k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-ingress
  namespace: bookstore-dev


spec:

  ingressClassName: nginx

  rules:

  - host: npplstore.local

    http:

      paths:

      - path: /
        pathType: Prefix
        backend:
          service:

            name: frontend-service
            port: 
              number: 5173



      - path: /api
        pathType: Prefix
        backend: 
          service:

            name: backend-service
            port:
              number: 5555
